--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 font-size: 12px;
             }
         }
+
+        /* Темно-зеленая заливка для предполагаемых победителей */
+        .winner {
+            background-color: #006400;
+        }
     </style>
 </head>
 <body>
@@ -64,49 +69,49 @@
                 <th>Painters</th>
                 <th>Photo</th>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>1</td>
                 <td>1073319934</td>
                 <td>8.83M</td>
                 <td>128.56K</td>
                 <td><img src="https://static.notpx.app/tournament/1073319934-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>2</td>
                 <td>1324081469</td>
                 <td>8.50M</td>
                 <td>81.46K</td>
                 <td><img src="https://static.notpx.app/tournament/1324081469-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>3</td>
                 <td>6355200889</td>
                 <td>7.84M</td>
                 <td>159.36K</td>
                 <td><img src="https://static.notpx.app/tournament/6355200889-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>4</td>
                 <td>1325258259</td>
                 <td>7.82M</td>
                 <td>191.01K</td>
                 <td><img src="https://static.notpx.app/tournament/1325258259-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>5</td>
                 <td>1051759252</td>
                 <td>7.20M</td>
                 <td>64.10K</td>
                 <td><img src="https://static.notpx.app/tournament/1051759252-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>6</td>
                 <td>5190413609</td>
                 <td>7.08M</td>
                 <td>67.11K</td>
                 <td><img src="https://static.notpx.app/tournament/5190413609-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>7</td>
                 <td>1964161795</td>
                 <td>4.97M</td>
@@ -134,7 +139,7 @@
                 <td>47.33K</td>
                 <td><img src="https://static.notpx.app/tournament/2060988783-6.png" alt="Photo"></td>
             </tr>
-            <tr>
+            <tr class="winner">
                 <td>11</td>
                 <td>7319890725</td>
                 <td>3.88M</td>
