--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         .winner {
             background-color: #006400;
         }
+
+        /* Скрытая ссылка, но с видимым текстом */
+        .hidden-link {
+            color: white;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -71,115 +77,115 @@
             </tr>
             <tr class="winner">
                 <td>1</td>
-                <td>1073319934</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1073319934_t">1073319934</a></td>
                 <td>8.83M</td>
                 <td>128.56K</td>
-                <td><img src="https://static.notpx.app/tournament/1073319934-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/1073319934-7.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>2</td>
-                <td>1324081469</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1324081469_t">1324081469</a></td>
                 <td>8.50M</td>
                 <td>81.46K</td>
-                <td><img src="https://static.notpx.app/tournament/1324081469-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/1324081469-7.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>3</td>
-                <td>6355200889</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f6355200889_t">6355200889</a></td>
                 <td>7.84M</td>
                 <td>159.36K</td>
-                <td><img src="https://static.notpx.app/tournament/6355200889-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/6355200889-7.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>4</td>
-                <td>1325258259</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1325258259_t">1325258259</a></td>
                 <td>7.82M</td>
                 <td>191.01K</td>
-                <td><img src="https://static.notpx.app/tournament/1325258259-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/1325258259-7.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>5</td>
-                <td>1051759252</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1051759252_t">1051759252</a></td>
                 <td>7.20M</td>
                 <td>64.10K</td>
-                <td><img src="https://static.notpx.app/tournament/1051759252-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/1051759252-7.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>6</td>
-                <td>5190413609</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f5190413609_t">5190413609</a></td>
                 <td>7.08M</td>
                 <td>67.11K</td>
                 <td><img src="https://static.notpx.app/tournament/5190413609-6.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>7</td>
-                <td>1964161795</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1964161795_t">1964161795</a></td>
                 <td>4.97M</td>
                 <td>86.28K</td>
-                <td><img src="https://static.notpx.app/tournament/1964161795-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/1964161795-7.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>7079059155</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f7079059155_t">7079059155</a></td>
                 <td>4.82M</td>
                 <td>36.23K</td>
-                <td><img src="https://static.notpx.app/tournament/7079059155-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/7079059155-7.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>9</td>
-                <td>6597594922</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f6597594922_t">6597594922</a></td>
                 <td>4.20M</td>
                 <td>48.16K</td>
                 <td><img src="https://static.notpx.app/tournament/6597594922-6.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>10</td>
-                <td>2060988783</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f2060988783_t">2060988783</a></td>
                 <td>3.96M</td>
                 <td>47.33K</td>
                 <td><img src="https://static.notpx.app/tournament/2060988783-6.png" alt="Photo"></td>
             </tr>
             <tr class="winner">
                 <td>11</td>
-                <td>7319890725</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f7319890725_t">7319890725</a></td>
                 <td>3.88M</td>
                 <td>362.02K</td>
                 <td><img src="https://static.notpx.app/tournament/7319890725-6.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>12</td>
-                <td>575074575</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f575074575_t">575074575</a></td>
                 <td>3.54M</td>
                 <td>57.09K</td>
                 <td><img src="https://static.notpx.app/tournament/575074575-6.png?time=1" alt="Photo"></td>
             </tr>
             <tr>
                 <td>13</td>
-                <td>5038459873</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f5038459873_t">5038459873</a></td>
                 <td>3.50M</td>
                 <td>35.56K</td>
-                <td><img src="https://static.notpx.app/tournament/5038459873-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/5038459873-7.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>14</td>
-                <td>1083893924</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1083893924_t">1083893924</a></td>
                 <td>3.34M</td>
                 <td>49.08K</td>
-                <td><img src="https://static.notpx.app/tournament/1083893924-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/1083893924-7.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>15</td>
-                <td>242092214</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f242092214_t">242092214</a></td>
                 <td>2.94M</td>
                 <td>28.83K</td>
-                <td><img src="https://static.notpx.app/tournament/242092214-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/242092214-7.png" alt="Photo"></td>
             </tr>
             <tr>
                 <td>16</td>
-                <td>6908275425</td>
+                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f6908275425_t">6908275425</a></td>
                 <td>2.63M</td>
                 <td>20.71K</td>
-                <td><img src="https://static.notpx.app/tournament/6908275425-6.png" alt="Photo"></td>
+                <td><img src="https://static.notpx.app/tournament/6908275425-7.png" alt="Photo"></td>
             </tr>
         </table>
     </div>
