--- a/index.html
+++ b/index.html
@@ -1,193 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scrollable Page</title>
+    <title>Простой Тетрис</title>
     <style>
-        /* Центрирование страницы и фон */
         body {
             background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        /* Контейнер для таблицы */
-        .table-container {
-            width: 90%; /* Ширина таблицы */
-            margin: 50px auto; /* Отступы сверху и снизу */
-        }
-
-        /* Таблица */
-        table {
-            border-collapse: collapse;
-            width: 100%; /* Таблица занимает весь контейнер */
-            text-align: center;
-            background-color: #222;
-            color: white;
-        }
-
-        th, td {
-            border: 1px solid #555;
-            padding: 8px; /* Отступы внутри ячеек */
-        }
-
-        th {
-            background-color: #444;
-        }
-
-        /* Уменьшение изображений */
-        img {
-            width: 40px;
-            height: auto;
-        }
-
-        /* Для обеспечения адаптивности */
-        @media screen and (max-width: 768px) {
-            table {
-                font-size: 12px;
-            }
-        }
-
-        /* Темно-зеленая заливка для предполагаемых победителей */
-        .winner {
-            background-color: #006400;
-        }
-
-        /* Скрытая ссылка, но с видимым текстом */
-        .hidden-link {
-            color: white;
-            text-decoration: none;
+        canvas {
+            border: 1px solid white;
         }
     </style>
 </head>
 <body>
-    <div class="table-container">
-        <table>
-            <tr>
-                <th>Place</th>
-                <th>ID</th>
-                <th>Repaints</th>
-                <th>Painters</th>
-                <th>Photo</th>
-            </tr>
-            <tr class="winner">
-                <td>1</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1073319934_t">1073319934</a></td>
-                <td>8.83M</td>
-                <td>128.56K</td>
-                <td><img src="https://static.notpx.app/tournament/1073319934-7.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>2</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1324081469_t">1324081469</a></td>
-                <td>8.50M</td>
-                <td>81.46K</td>
-                <td><img src="https://static.notpx.app/tournament/1324081469-7.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>3</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f6355200889_t">6355200889</a></td>
-                <td>7.84M</td>
-                <td>159.36K</td>
-                <td><img src="https://static.notpx.app/tournament/6355200889-7.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>4</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1325258259_t">1325258259</a></td>
-                <td>7.82M</td>
-                <td>191.01K</td>
-                <td><img src="https://static.notpx.app/tournament/1325258259-7.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>5</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1051759252_t">1051759252</a></td>
-                <td>7.20M</td>
-                <td>64.10K</td>
-                <td><img src="https://static.notpx.app/tournament/1051759252-7.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>6</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f5190413609_t">5190413609</a></td>
-                <td>7.08M</td>
-                <td>67.11K</td>
-                <td><img src="https://static.notpx.app/tournament/5190413609-6.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>7</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1964161795_t">1964161795</a></td>
-                <td>4.97M</td>
-                <td>86.28K</td>
-                <td><img src="https://static.notpx.app/tournament/1964161795-7.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f7079059155_t">7079059155</a></td>
-                <td>4.82M</td>
-                <td>36.23K</td>
-                <td><img src="https://static.notpx.app/tournament/7079059155-7.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f6597594922_t">6597594922</a></td>
-                <td>4.20M</td>
-                <td>48.16K</td>
-                <td><img src="https://static.notpx.app/tournament/6597594922-6.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f2060988783_t">2060988783</a></td>
-                <td>3.96M</td>
-                <td>47.33K</td>
-                <td><img src="https://static.notpx.app/tournament/2060988783-6.png" alt="Photo"></td>
-            </tr>
-            <tr class="winner">
-                <td>11</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f7319890725_t">7319890725</a></td>
-                <td>3.88M</td>
-                <td>362.02K</td>
-                <td><img src="https://static.notpx.app/tournament/7319890725-6.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f575074575_t">575074575</a></td>
-                <td>3.54M</td>
-                <td>57.09K</td>
-                <td><img src="https://static.notpx.app/tournament/575074575-6.png?time=1" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>13</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f5038459873_t">5038459873</a></td>
-                <td>3.50M</td>
-                <td>35.56K</td>
-                <td><img src="https://static.notpx.app/tournament/5038459873-7.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>14</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f1083893924_t">1083893924</a></td>
-                <td>3.34M</td>
-                <td>49.08K</td>
-                <td><img src="https://static.notpx.app/tournament/1083893924-7.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>15</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f242092214_t">242092214</a></td>
-                <td>2.94M</td>
-                <td>28.83K</td>
-                <td><img src="https://static.notpx.app/tournament/242092214-7.png" alt="Photo"></td>
-            </tr>
-            <tr>
-                <td>16</td>
-                <td><a class="hidden-link" href="https://t.me/notpixel/app?startapp=f6908275425_t">6908275425</a></td>
-                <td>2.63M</td>
-                <td>20.71K</td>
-                <td><img src="https://static.notpx.app/tournament/6908275425-7.png" alt="Photo"></td>
-            </tr>
-        </table>
-    </div>
+    <canvas id="gameCanvas" width="200" height="400"></canvas>
+    <script>
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        const gridSize = 20;
+        const cols = canvas.width / gridSize;
+        const rows = canvas.height / gridSize;
+
+        // Текущий падающий блок
+        const block = {
+            x: Math.floor(cols / 2) - 1,
+            y: 0,
+            shape: [
+                [1, 1],
+                [1, 1]
+            ],
+            color: 'cyan'
+        };
+
+        // Игровое поле
+        let grid = Array(rows).fill().map(() => Array(cols).fill(0));
+
+        // Отрисовка
+        function draw() {
+            ctx.fillStyle = 'black';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            // Рисуем блок
+            ctx.fillStyle = block.color;
+            for (let r = 0; r < block.shape.length; r++) {
+                for (let c = 0; c < block.shape[r].length; c++) {
+                    if (block.shape[r][c]) {
+                        ctx.fillRect((block.x + c) * gridSize, (block.y + r) * gridSize, gridSize - 1, gridSize - 1);
+                    }
+                }
+            }
+
+            // Рисуем поле
+            for (let r = 0; r < rows; r++) {
+                for (let c = 0; c < cols; c++) {
+                    if (grid[r][c]) {
+                        ctx.fillStyle = 'gray';
+                        ctx.fillRect(c * gridSize, r * gridSize, gridSize - 1, gridSize - 1);
+                    }
+                }
+            }
+        }
+
+        // Проверка столкновений
+        function collides(dx = 0, dy = 0) {
+            for (let r = 0; r < block.shape.length; r++) {
+                for (let c = 0; c < block.shape[r].length; c++) {
+                    if (block.shape[r][c]) {
+                        let newX = block.x + c + dx;
+                        let newY = block.y + r + dy;
+                        if (newX < 0 || newX >= cols || newY >= rows || (newY >= 0 && grid[newY][newX])) {
+                            return true;
+                        }
+                    }
+                }
+            }
+            return false;
+        }
+
+        // Закрепление блока на поле
+        function merge() {
+            for (let r = 0; r < block.shape.length; r++) {
+                for (let c = 0; c < block.shape[r].length; c++) {
+                    if (block.shape[r][c]) {
+                        grid[block.y + r][block.x + c] = 1;
+                    }
+                }
+            }
+            block.x = Math.floor(cols / 2) - 1;
+            block.y = 0;
+        }
+
+        // Движение вниз
+        function drop() {
+            if (!collides(0, 1)) {
+                block.y++;
+            } else {
+                merge();
+            }
+            draw();
+        }
+
+        // Управление
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'ArrowLeft' && !collides(-1, 0)) block.x--;
+            if (e.key === 'ArrowRight' && !collides(1, 0)) block.x++;
+            if (e.key === 'ArrowDown') drop();
+            draw();
+        });
+
+        // Игровой цикл
+        setInterval(drop, 500);
+        draw();
+    </script>
 </body>
 </html>
